# chip8-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: audio.h  cpu.h  display.h  emulator.h  ini.h  input.h  io.h  random.h  timer.h  types.h  ui.h
include/types/: forward_decl.h
lib/: CMakeLists.txt
lib/include/: random.h  system_utils.h
lib/src/: random.cpp  system_utils.cpp
src/: audio.cpp  common.hpp  cpu.cpp  cpu.h  display.cpp  display.h  emulator.cpp  ini.cpp  input.cpp  input.h  io.cpp  main.cpp  random.cpp  random.h  sound.cpp  sound.h  timer.cpp  timer.h  ui.cpp  ui.h
